--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
+--upgrade pip setuptools wheel
 beautifulsoup4==4.12.3
 matplotlib==3.9.1
 pandas==2.2.2
 Requests==2.32.3
 spacy==3.0.0
 streamlit==1.36.0
-https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0.tar.gz
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.0/en_core_web_sm-2.2.0.tar.gz
